--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 
 <body>
-  <!-- <h1>Hello JVL Code !</h1>
+  <!-- <h1>Hello JVL Code !</h1> -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script> -->
+    crossorigin="anonymous"></script> 
 
   <!--  Container and container-fluid 
 
@@ -52,7 +52,26 @@
 
   <div class="container">
     <!-- content -->
-     
+     <div class="row">
+      <div class="col">
+        <p>This is simple column in row</p>
+      </div>
+      <div class="col">
+        <p>This is simple column in row</p>
+      </div>
+      <div class="col">
+        <p>This is simple column in row</p>
+      </div>
+     </div>
+     <div class="row">
+      <div class="col">
+        <p>This is simple column in row</p>
+      </div>
+      <div class="col">
+        <p>This is simple column in row</p>
+      </div>
+    
+     </div>
   </div>
 
 </body>
