--- a/simplebloglayout.html
+++ b/simplebloglayout.html
@@ -1,4 +1,5 @@
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,27 +8,28 @@
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
 </head>
+
 <body>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-  crossorigin="anonymous"></script> 
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
   <!-- simple blog layout -->
-   <div class="container">
-    <header>
+  <div class="container">
+    <header class="p-4">
       <div class="row">
         <h1>My Blog</h1>
       </div>
       <div>
-      <nav>
-        <ul class="list-inline">
-          <li class="list-inline-item"><a href="a">Home</a></li>
-          <li class="list-inline-item"><a href="a">About</a></li>
-          <li class="list-inline-item"><a href="a">Contact</a></li>
-        </ul>
-      </nav>
-    </div>
+        <nav>
+          <ul class="list-inline">
+            <li class="list-inline-item"><a href="a">Home</a></li>
+            <li class="list-inline-item"><a href="a">About</a></li>
+            <li class="list-inline-item"><a href="a">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
-    <h1>Simple blog bootstrap 5</h1>
+    <h1 class="m-2">Simple blog bootstrap 5</h1>
     <div class="row">
       <div class="col">
         <h2>Post Title 1</h2>
@@ -44,21 +46,22 @@
         <p>Date: Feb 04,2025</p>
         <p>This is the content of Post 3</p>
       </div>
-      <footer>
+      <footer class="p-4">
         <div class="row">
           <div class="col">
             <p>2025 My Blog. All Rights reserved</p>
           </div>
           <div class="col">
             <ul class="list-inline">
-        <li class="list-inline-item"><a href="a" >Terms of service</a></li>
-            <li class="list-inline-item"><a href="a">Privacy policy</a></li>
-            <li class="list-inline-item"><a href="a">Sitemap</a></li>
+              <li class="list-inline-item"><a href="a">Terms of service</a></li>
+              <li class="list-inline-item"><a href="a">Privacy policy</a></li>
+              <li class="list-inline-item"><a href="a">Sitemap</a></li>
             </ul>
           </div>
         </div>
       </footer>
     </div>
-   </div>
+  </div>
 </body>
+
 </html>
